{{$NEXT}}

0.04 2020-01-21
-Remove superfluous dependency on DateTime::Format::RFC3339, which was only
 needed for unit tests

0.03 2020-01-18
-Remove automatic inflation of numerical types using Math::Big(Int|Float);
 this may now be done with inflate_integer and inflate_float

0.02 2020-01-17
-Add MANIFEST.SKIP to prevent dzil from including author scripts

0.01 2020-01-17
-Initial release