@@ -1,5 +1,5 @@
 package TOML::Tiny::Grammar;
-# ABSTRACT: exports regex definition of TOML grammar
+# ABSTRACT: exports regex definitions used to parse TOML source
 
 use strict;
 use warnings;
@@ -148,36 +148,57 @@ Exports various regexex for parsing TOML source.
 =head1 PATTERNS
 
 =head2 White space and ignorables
+
 =head3 $WS
+
 =head3 $CRLF
+
 =head3 $EOL
+
 =head3 $Comment
 
 =head2 Keys
+
 =head3 $BareKey
+
 =head3 $QuotedKey
+
 =head3 $SimpleKey
+
 =head3 $DottedKey
+
 =head3 $Key
 
 =head2 Values
+
 =head3 $Boolean
 
 =head3 $Escape
+
 =head3 $StringLiteral
+
 =head3 $MultiLineStringLiteral
+
 =head3 $BasicString
+
 =head3 $MultiLineString
+
 =head3 $String
 
 =head3 $Date
+
 =head3 $Time
+
 =head3 $DateTime
 
 =head3 $Hex
+
 =head3 $Oct
+
 =head3 $Bin
+
 =head3 $Dec
+
 =head3 $Integer
 
 =head3 $Float
